--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -5,6 +5,7 @@ body{
 }
 
 
+
 /*  SECTIONS  */
 .section {
 	clear: both;
@@ -95,14 +96,10 @@ body{
 
 }
 
-.banner-home{
-    width:100%;
-    height:500px;
-    background-image:url('../images/banr.jpeg');
-    background-size:cover;
-    background-attachment: fixed;
-    background-position: center;
-}
+
+
+
+
 .banner-home-secong{
     width:100%;
     height:300px;
@@ -215,9 +212,7 @@ body{
     color:rgb(236, 234, 234);
 }
 
-.section-part div{
 
-}
 .section-part-content{
     width:80%;
     margin:0 auto;
@@ -241,3 +236,11 @@ body{
     padding:10px;
 }
 
+#banner-home2{
+    width:100%;
+    height:300px;
+    background-image:url('../images/blog-ara.png');
+    background-size:contain;
+    background-position: center;
+    background-repeat:repeat-x;
+}  
