--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -97,7 +97,14 @@ body{
 }
 
 
-
+.banner-home{
+    width:100%;
+    height:500px;
+    background-image:url('../images/banr.jpeg');
+    background-size:cover;
+    background-attachment: fixed;
+    background-position: center;
+}
 
 
 .banner-home-secong{
@@ -236,11 +243,55 @@ body{
     padding:10px;
 }
 
-#banner-home2{
+.banner-home2{
     width:100%;
+
     height:300px;
-    background-image:url('../images/blog-ara.png');
-    background-size:contain;
+    background-image:url('../images/bl.jpg');
+    background-size:cover;
+   
     background-position: center;
-    background-repeat:repeat-x;
+    background-repeat:no-repeat;
 }  
+
+.parent-blog{
+    width:90%;
+    margin:0 auto;
+    background-color:whitesmoke  ;
+}
+.parent-blog h4{
+    text-align:center
+}
+.view-blog-entry{
+    width:40%;
+   
+    margin:10px;
+    padding:10px;
+    background-color:wheat
+
+}
+.wiew-blog-alt{
+    display:flex;
+    justify-content:space-between;
+}
+.wiew-blog-alt button{
+  width:100px;
+  height:30px;
+  padding:15px;
+  color:white;
+  background-color:black;
+  text-align:center;
+  outline:none;
+  border:none;
+  border-radius:3px;
+  transition: 2s;
+} 
+.wiew-blog-alt button:hover{
+    background-color:rgb(63, 63, 63);
+    cursor:pointer;
+}
+.blogs{
+    width:100%;
+    display:flex;
+    justify-content:space-around;
+}
