--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -298,3 +298,40 @@ body{
     flex-wrap: wrap;
     justify-content:space-around;
 }
+.admin-tables{
+    width:80%;
+    color:rgb(241, 237, 237);
+    margin:0 auto;
+    padding:10px;
+    height:auto;
+    background-color:rgb(255, 255, 255);
+    box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
+   padding:5px;
+   
+}
+.blog-row{
+    width:90%;
+    height:40px;
+    border-radius:3px;
+    
+    padding:10px;
+    margin-top: 0px;
+    margin-right: auto;
+    margin-bottom: 10px;
+    margin-left: auto;
+    background-color:steelblue;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
+.blog-row table{
+    width:100%;
+    height:40px;
+    margin-bottom:10px;
+    font-weight:600;
+    font-size:17px;
+}
+.blog-row table tr td a{
+    text-decoration:none;
+    color:rgb(236, 236, 236)
+}
