--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -430,3 +430,18 @@ a{
     color:yellow;
     text-decoration:none;
 }
+.banner-blog-top{
+width:100%;
+height:200px;
+    background-image: url("../images/img3.jpeg");
+    background-size:cover
+
+}
+.view-blog{
+    width:70%;
+    margin:0 auto;
+    background-color:whitesmoke;
+    padding:15px;
+    font-size:17px;
+    
+}
