--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -107,9 +107,9 @@ body{
 .banner-home{
     width:100%;
     height:500px;
-    background-image:url('../images/banr.jpeg');
+    background-image:url('../images/banr.jpg');
     background-size:cover;
-    background-attachment: fixed;
+    
     background-position: center;
 }
 
@@ -117,7 +117,7 @@ body{
 .banner-home-secong{
     width:100%;
     height:300px;
-    background-image:url('../images/blog-ara.png');
+    background-image:url('../images/blog-ara.jpg');
     background-size:contain;
     background-position: center;
     background-repeat:repeat-x;
@@ -254,11 +254,11 @@ body{
     width:100%;
 
     height:300px;
-    background-image:url('../images/bl.jpg');
-    background-size:cover;
+    background-image:url('../images/blog-area.jpg');
+   
    
     background-position: center;
-    background-repeat:no-repeat;
+    background-repeat: repeat-x;
 }  
 
 .parent-blog{
